// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h5
  className="sc-bdVaJa gBbUAx sinoui-typography sinoui-typography--h5"
  color="textPrimary"
  type="h5"
>
  H5
</h5>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdVaJa gBbUAx sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h2>,
  <h5
    className="sc-bdVaJa fAYoik sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa ccrZxX sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa bHawEY sinoui-typography sinoui-typography--h5"
    color="success"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa eyRFNc sinoui-typography sinoui-typography--h5 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h5
    className="sc-bdVaJa gBbUAx sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa chNTsw sinoui-typography sinoui-typography--h5"
    color="primary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa HqxJj sinoui-typography sinoui-typography--h5"
    color="secondary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa gBbUAx sinoui-typography sinoui-typography--h5"
    color="textPrimary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa gHvqNJ sinoui-typography sinoui-typography--h5"
    color="textSecondary"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa wupoJ sinoui-typography sinoui-typography--h5"
    color="error"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa kolxxD sinoui-typography sinoui-typography--h5"
    color="warning"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa bHawEY sinoui-typography sinoui-typography--h5"
    color="success"
    type="h5"
  >
    H5
  </h5>,
  <h5
    className="sc-bdVaJa ckaCY sinoui-typography sinoui-typography--h5"
    color="info"
    type="h5"
  >
    H5
  </h5>,
]
`;
